crates/math-core/tests/snapshots/conversion_test__underset_equal_subscript_before_closing_paren.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "(x\\underset{a}=_2)"
---
<math>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <msub>
        <munder>
            <mo rspace="0">=</mo>
            <mi>a</mi>
        </munder>
        <mn>2</mn>
    </msub>
    <mo stretchy="false">)</mo>
</math>
