crates/math-core/tests/snapshots/conversion_test__underset_tilde.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\underset{z\\sim Z}{\\mathbb{E}}"
---
<math>
    <munder>
        <mi>𝔼</mi>
        <mrow>
            <mi>z</mi>
            <mo form="infix" lspace="0" rspace="0">∼</mo>
            <mi>Z</mi>
        </mrow>
    </munder>
</math>
