crates/math-core/tests/snapshots/conversion_test__unicode_largeop_mixed_limits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "⅀\\nolimits_0\\displaylimits^1\\limits"
---
<math>
    <munderover>
        <mo symmetric="true" largeop="true" lspace="0" rspace="0">⅀</mo>
        <mn>0</mn>
        <mn>1</mn>
    </munderover>
</math>
