crates/math-core/tests/snapshots/conversion_test__unicode_largeop_mixed_limits_2.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "⅀\\nolimits_0\\limits^1\\displaylimits"
---
<math>
    <munderover>
        <mo movablelimits="true" symmetric="true" largeop="true" lspace="0" rspace="0">⅀</mo>
        <mn>0</mn>
        <mn>1</mn>
    </munderover>
</math>
