crates/math-core/tests/snapshots/conversion_test__unicode_largeop_mixed_limits_3.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "⅀\\displaylimits_0\\limits^1\\nolimits"
---
<math>
    <msubsup>
        <mo symmetric="true" largeop="true" lspace="0" rspace="0">⅀</mo>
        <mn>0</mn>
        <mn>1</mn>
    </msubsup>
</math>
