crates/math-core/tests/snapshots/conversion_test__unicode_nabla.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "∇^2 f = \\nabla^2 f"
---
<math>
    <msup>
        <mrow><mspace/><mi mathvariant="normal">∇</mi></mrow>
        <mn>2</mn>
    </msup>
    <mi>f</mi>
    <mo>=</mo>
    <msup>
        <mrow><mspace/><mi mathvariant="normal">∇</mi></mrow>
        <mn>2</mn>
    </msup>
    <mi>f</mi>
</math>
