crates/math-core/tests/snapshots/conversion_test__unicode_nabla_in_mathbf.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathbf{∇}"
---
<math>
    <mi>𝛁</mi>
</math>
